[package]
name = "mirl_derive"
version = "0.0.0-alpha"
readme.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true

[lib]
proc-macro = true
